# ReelTrust

./: .gitignore  README.md  poe_tasks.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml  py-lint-and-format-checks.yml  py-testing.yml
docs/: CONTRIBUTING.md  SPEC.md  SSIM.md  project_plan.md  strategy.md
src/reeltrust/: __init__.py  audio_fingerprint.py  cli.py  fingerprints.py  metadata.py  regions.py  signature.py  signer.py  verifier.py  video_processor.py
tests/: __init__.py  test_reeltrust.py
